--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="TripleTen Art Gallery" />
     <meta name="keywords" content="TripleTen, Art Gallery" />
     <title>TripleTen Gallery Art</title>
-    <link rel="stylesheet" href="/pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
 
