Correcion Clase Page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="page">
-      <div class="page__container">
+      <div class="page page__container">
         <header class="header">
           <img
             class="header__logo"
