Correccion index.css

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             class="header__image"
           />
         </header>
-        <main class="main">
-          <section class="main__content content">
+        <main class="content main">
+          <section class="main__content">
             <h2 class="content__title">
               Conoce un poco mejor los lugares de los que proceden tus colegas
               en línea
