--- a/index.html
+++ b/index.html
@@ -58,6 +58,93 @@
               importa de dónde seas, nos alegra que seas nuestro vecino.
             </p>
           </section>
+          <section class="content__gallery">
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-1.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-2.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-3.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-4.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-5.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-6.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-7.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-8.jpg"
+              alt="Imagen De Paisaje"
+            />
+          </section>
+          <section class="content__places">
+            <div class="content__place content__place-1">
+              <h3 class="content__place__title">Cricieth, Gales</h3>
+
+              <div class="content__place__artist">
+                <p class="content__place__artist-url">Artistas</p>
+                <p class="content__place__artist-text">
+                  Steffan Warren, editor jefe
+                </p>
+                <p class="content__place__artist-text">
+                  Kseniya Glagoleva, gerente de proyectos
+                </p>
+              </div>
+
+              <img
+                class="content__place__image"
+                src="images/places__image-1.jpg"
+                alt="Imagen De Paisaje"
+              />
+
+              <p class="content__place__text-1">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada *Perla de Gales en las costas de
+                Snowdonia*, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p class="content__place__text-2">
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+              <div class="content__place__button">
+                <p class="content__place__button-text">
+                  Compra esta obra como NFT
+                </p>
+              </div>
+            </div>
+          </section>
         </main>
         <footer class="footer">
           <p class="footer__copyright">&copy; 2024. Ari Campos</p>
