Primer intento de Entrega

--- a/index.html
+++ b/index.html
@@ -58,6 +58,226 @@
               importa de dónde seas, nos alegra que seas nuestro vecino.
             </p>
           </section>
+          <section class="content__gallery">
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-1.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-2.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-3.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-4.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-5.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-6.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-7.jpg"
+              alt="Imagen De Paisaje"
+            />
+            <img
+              class="content__gallery-image"
+              src="images/gallery__item-8.jpg"
+              alt="Imagen De Paisaje"
+            />
+          </section>
+          <section class="content__places">
+            <div class="content__place">
+              <h3 class="content__place__title">Cricieth, Gales</h3>
+
+              <div class="content__place__artist">
+                <p class="content__place__artist-url">Artistas</p>
+                <p class="content__place__artist-text">
+                  Steffan Warren, editor jefe
+                </p>
+                <p class="content__place__artist-text">
+                  Kseniya Glagoleva, gerente de proyectos
+                </p>
+              </div>
+              <img
+                class="content__place__image"
+                src="images/places__image-1.jpg"
+                alt="Imagen De Paisaje"
+              />
+              <div class="place_paragraphs">
+                <p class="content__place__text-1">
+                  Las ruinas medievales del castillo de Cricieth dominan la
+                  ciudad desde una roca que extiende sobre el mar. Se cree que
+                  fue construido por Llewelyn el Grande en el S. XIII. 800 años
+                  después, la autodenominada *Perla de Gales en las costas de
+                  Snowdonia*, se ha convertido en un popular destino turístico
+                  durante los meses de verano.
+                </p>
+                <p class="content__place__text-2">
+                  A pocos pasos de camino al castillo, puedes disfrutar de los
+                  mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                  secreto se rumorea que son algas marinas de la localidad. Otra
+                  cosa por la que es famosa Cricieth es por haber ganado el
+                  premio *Gales en flor* durante cinco años seguidos por sus
+                  espectaculares muestras florales alrededor de la ciudad.
+                  También vio nacer a David Lloyd George, el único galés que ha
+                  sido Primer Ministro del Reino Unido.
+                </p>
+              </div>
+              <div class="content__place__button">
+                <p class="content__place__button-text">
+                  Compra esta obra como NFT
+                </p>
+              </div>
+            </div>
+
+            <div class="content__place">
+              <h3 class="content__place__title">Berea, EE. UU.</h3>
+
+              <div class="content__place__artist">
+                <p class="content__place__artist-url">Artistas</p>
+
+                <p class="content__place__artist-text">
+                  Travis Turner, autor y editor
+                </p>
+              </div>
+              <img
+                class="content__place__image"
+                src="images/places__image-2.jpg"
+                alt="Imagen De Paisaje"
+              />
+              <div class="place_paragraphs">
+                <p class="content__place__text-1">
+                  Berea es una pequeña ciudad ubicada en la parte central de
+                  Kentucky. La ciudad está rodeada por hermosos bosques y
+                  campos. Es conocida como la capital de la artesanía del
+                  estado, y sus visitantes hallarán infinitas posibilidades para
+                  ir de compras: tiendas de joyas, velas y artículos de madera
+                  artesanales; galerías, talleres de vidrio y más. La ciudad
+                  celebra un festival anual que rinde tributo al "spoonbread",
+                  un platillo local hecho de pan de maíz y que se sirve con una
+                  cuchara de madera.
+                </p>
+                <p class="content__place__text-2">
+                  Aunque, probablemente es mejor conocida por su universidad. El
+                  Berea College fue fundado en 1855 y fue la primera universidad
+                  sureña integrada racialmente, así como la primera en ser
+                  coeducacional. Algo que en cierta manera la hace única, es que
+                  no cobra colegiatura: cada estudiante recibe una beca del
+                  100%.
+                </p>
+              </div>
+              <div class="content__place__button">
+                <p class="content__place__button-text">
+                  Compra esta obra como NFT
+                </p>
+              </div>
+            </div>
+
+            <div class="content__place">
+              <h3 class="content__place__title">Muramvya, Burundi</h3>
+
+              <div class="content__place__artist">
+                <p class="content__place__artist-url">Artistas</p>
+                <p class="content__place__artist-text">
+                  Grevisse Kenguruka, editor técnico
+                </p>
+              </div>
+              <img
+                class="content__place__image"
+                src="images/places__image-1.jpg"
+                alt="Imagen De Paisaje"
+              />
+              <div class="place_paragraphs">
+                <p class="content__place__text-1">
+                  Muramvya es una de las 18 provincias de Burundi. Durante la
+                  época del reino, Muramvya fue su capital; y en 2017, gracias a
+                  su paisaje cultural y natural, se añadió a la Lista
+                  provisional de patrimonio mundial de la UNESCO. Se encuentra
+                  ubicada en el centro de Burundi, entre las capitales política
+                  y económica del país.
+                </p>
+                <p class="content__place__text-2">
+                  Su clima es más bien frío durante la noche, pero durante el
+                  día, podrías pensar que estás en el paraíso. A sus 2,665
+                  metros (8,743 ft) sobre el nivel del mar, el Monte Teza es uno
+                  de los lugares más fríos de la provincia. Pero es justo esa
+                  brisa fresca la que da pie a una de las más grandes
+                  plantaciones de té y café del país, y que representa la
+                  mayoría de las exportaciones de Burundi.
+                </p>
+                <p class="content__place__text-3">
+                  El Parque nacional de Kibira, una de las mayores reservas de
+                  vida silvestre para los simios, ocupa parte de cuatro
+                  provincias, incluyendo Muramvya. Este parque nacional se
+                  encuentra en las cúspides de las hermosas montañas de la
+                  Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y
+                  2,660 metros. Está lleno de hermosa vegetación, y es una
+                  fuente para los diversos ríos y arroyos que proporcionan agua
+                  alrededor del país.
+                </p>
+              </div>
+              <div class="content__place__button">
+                <p class="content__place__button-text">
+                  Compra esta obra como NFT
+                </p>
+              </div>
+            </div>
+
+            <div class="content__place">
+              <h3 class="content__place__title">México Cholula</h3>
+
+              <div class="content__place__artist">
+                <p class="content__place__artist-url">Artistas</p>
+                <p class="content__place__artist-text">Ari Campos, TripleTen</p>
+              </div>
+              <img
+                class="content__place__image"
+                src="images/places__image-4.jpg"
+                alt="Imagen De Paisaje"
+              />
+              <div class="place_paragraphs">
+                <p class="content__place__text-1">
+                  Las pirámides prehispánicas de Cholula se elevan
+                  majestuosamente desde el corazón de la ciudad, destacando la
+                  Gran Pirámide de Cholula con su iglesia en la cima. Construida
+                  por los antiguos pueblos de Cholula, esta pirámide tiene más
+                  de 2,000 años de historia. Hoy, la llamada Ciudad Sagrada de
+                  Cholula se ha transformado en un vibrante destino turístico,
+                  conocido por su rica historia, coloridos festivales y su
+                  cercanía a la imponente vista del volcán Popocatépetl. La
+                  combinación de herencia ancestral y vida contemporánea atrae a
+                  visitantes durante todo el año.
+                </p>
+                <p class="content__place__text-2">
+                  Los visitantes pueden explorar túneles subterráneos, museos, y
+                  disfrutar de la gastronomía local. La mezcla de tradición y
+                  modernidad hace de Cholula un destino único. Las vistas del
+                  volcán y las festividades locales añaden un encanto especial a
+                  la experiencia turística.
+                </p>
+              </div>
+              <div class="content__place__button">
+                <p class="content__place__button-text">
+                  Compra esta obra como NFT
+                </p>
+              </div>
+            </div>
+          </section>
         </main>
         <footer class="footer">
           <p class="footer__copyright">&copy; 2024. Ari Campos</p>
