Correcion del primer intento /button agregado/Linea 103 class content

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               alt="Imagen De Paisaje"
             />
           </section>
-          <section class="content__places">
+          <section class="content content__places">
             <div class="content__place">
               <h3 class="content__place__title">Cricieth, Gales</h3>
 
@@ -138,11 +138,16 @@
                   sido Primer Ministro del Reino Unido.
                 </p>
               </div>
-              <div class="content__place__button">
+              <button class="content__place__button">
                 <p class="content__place__button-text">
-                  Compra esta obra como NFT
+                  <a
+                    target="_blank"
+                    class="content__place__button-link"
+                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                    >Compra esta obra como NFT</a
+                  >
                 </p>
-              </div>
+              </button>
             </div>
 
             <div class="content__place">
@@ -181,11 +186,16 @@
                   100%.
                 </p>
               </div>
-              <div class="content__place__button">
+              <button class="content__place__button">
                 <p class="content__place__button-text">
-                  Compra esta obra como NFT
+                  <a
+                    target="_blank"
+                    class="content__place__button-link"
+                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                    >Compra esta obra como NFT</a
+                  >
                 </p>
-              </div>
+              </button>
             </div>
 
             <div class="content__place">
@@ -231,11 +241,16 @@
                   alrededor del país.
                 </p>
               </div>
-              <div class="content__place__button">
+              <button class="content__place__button">
                 <p class="content__place__button-text">
-                  Compra esta obra como NFT
+                  <a
+                    target="_blank"
+                    class="content__place__button-link"
+                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                    >Compra esta obra como NFT</a
+                  >
                 </p>
-              </div>
+              </button>
             </div>
 
             <div class="content__place">
@@ -271,11 +286,16 @@
                   la experiencia turística.
                 </p>
               </div>
-              <div class="content__place__button">
+              <button class="content__place__button">
                 <p class="content__place__button-text">
-                  Compra esta obra como NFT
+                  <a
+                    target="_blank"
+                    class="content__place__button-link"
+                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                    >Compra esta obra como NFT</a
+                  >
                 </p>
-              </div>
+              </button>
             </div>
           </section>
         </main>
