2da correcion de primer intento

--- a/index.html
+++ b/index.html
@@ -138,16 +138,17 @@
                   sido Primer Ministro del Reino Unido.
                 </p>
               </div>
-              <button class="content__place__button">
-                <p class="content__place__button-text">
-                  <a
-                    target="_blank"
-                    class="content__place__button-link"
-                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                    >Compra esta obra como NFT</a
-                  >
-                </p>
-              </button>
+              <a
+                target="_blank"
+                class="content__place__button-link"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              >
+                <button class="content__place__button">
+                  <span class="content__place__button-text">
+                    Compra esta obra como NFT
+                  </span>
+                </button>
+              </a>
             </div>
 
             <div class="content__place">
@@ -186,16 +187,17 @@
                   100%.
                 </p>
               </div>
-              <button class="content__place__button">
-                <p class="content__place__button-text">
-                  <a
-                    target="_blank"
-                    class="content__place__button-link"
-                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                    >Compra esta obra como NFT</a
-                  >
-                </p>
-              </button>
+              <a
+                target="_blank"
+                class="content__place__button-link"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              >
+                <button class="content__place__button">
+                  <span class="content__place__button-text">
+                    Compra esta obra como NFT
+                  </span>
+                </button>
+              </a>
             </div>
 
             <div class="content__place">
@@ -241,16 +243,17 @@
                   alrededor del país.
                 </p>
               </div>
-              <button class="content__place__button">
-                <p class="content__place__button-text">
-                  <a
-                    target="_blank"
-                    class="content__place__button-link"
-                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                    >Compra esta obra como NFT</a
-                  >
-                </p>
-              </button>
+              <a
+                target="_blank"
+                class="content__place__button-link"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              >
+                <button class="content__place__button">
+                  <span class="content__place__button-text">
+                    Compra esta obra como NFT
+                  </span>
+                </button>
+              </a>
             </div>
 
             <div class="content__place">
@@ -286,16 +289,17 @@
                   la experiencia turística.
                 </p>
               </div>
-              <button class="content__place__button">
-                <p class="content__place__button-text">
-                  <a
-                    target="_blank"
-                    class="content__place__button-link"
-                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                    >Compra esta obra como NFT</a
-                  >
-                </p>
-              </button>
+              <a
+                target="_blank"
+                class="content__place__button-link"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              >
+                <button class="content__place__button">
+                  <span class="content__place__button-text">
+                    Compra esta obra como NFT
+                  </span>
+                </button>
+              </a>
             </div>
           </section>
         </main>
