Eliminicacion content__places

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               alt="Imagen De Paisaje"
             />
           </section>
-          <section class="content content__places">
+          <section class="content">
             <div class="content__place">
               <h3 class="content__place__title">Cricieth, Gales</h3>
 
@@ -118,7 +118,7 @@
                 src="images/places__image-1.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="place_paragraphs">
+              <div class="content__place_paragraphs">
                 <p class="content__place__text-1">
                   Las ruinas medievales del castillo de Cricieth dominan la
                   ciudad desde una roca que extiende sobre el mar. Se cree que
