Metolodgia BEM corrigida

--- a/index.html
+++ b/index.html
@@ -102,24 +102,24 @@
           </section>
           <section class="content">
             <div class="content__place">
-              <h3 class="content__place__title">Cricieth, Gales</h3>
+              <h3 class="content__place-title">Cricieth, Gales</h3>
 
-              <div class="content__place__artist">
-                <p class="content__place__artist-url">Artistas</p>
-                <p class="content__place__artist-text">
+              <div class="content__place-artist">
+                <p class="content__place-artist-url">Artistas</p>
+                <p class="content__place-artist-text">
                   Steffan Warren, editor jefe
                 </p>
-                <p class="content__place__artist-text">
+                <p class="content__place-artist-text">
                   Kseniya Glagoleva, gerente de proyectos
                 </p>
               </div>
               <img
-                class="content__place__image"
+                class="content__place-image"
                 src="images/places__image-1.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place__paragraphs">
-                <p class="content__place__text-1">
+              <div class="content__place-image">
+                <p class="content__place-text-1">
                   Las ruinas medievales del castillo de Cricieth dominan la
                   ciudad desde una roca que extiende sobre el mar. Se cree que
                   fue construido por Llewelyn el Grande en el S. XIII. 800 años
@@ -127,7 +127,7 @@
                   Snowdonia*, se ha convertido en un popular destino turístico
                   durante los meses de verano.
                 </p>
-                <p class="content__place__text-2">
+                <p class="content__place-text-2">
                   A pocos pasos de camino al castillo, puedes disfrutar de los
                   mejores helados del mundo en Cadwalader's, cuyo ingrediente
                   secreto se rumorea que son algas marinas de la localidad. Otra
@@ -139,30 +139,30 @@
                 </p>
               </div>
 
-              <button class="content__place__button">
-                <span class="content__place__button-text">
+              <button class="content__place-button">
+                <span class="content__place-button-text">
                   Compra esta obra como NFT
                 </span>
               </button>
             </div>
 
             <div class="content__place">
-              <h3 class="content__place__title">Berea, EE. UU.</h3>
+              <h3 class="content__place-title">Berea, EE. UU.</h3>
 
-              <div class="content__place__artist">
-                <p class="content__place__artist-url">Artistas</p>
+              <div class="content__place-artist">
+                <p class="content__place-artist-url">Artistas</p>
 
-                <p class="content__place__artist-text">
+                <p class="content__place-artist-text">
                   Travis Turner, autor y editor
                 </p>
               </div>
               <img
-                class="content__place__image"
+                class="content__place-image"
                 src="images/places__image-2.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place__paragraphs">
-                <p class="content__place__text-1">
+              <div class="content__place-image">
+                <p class="content__place-text-1">
                   Berea es una pequeña ciudad ubicada en la parte central de
                   Kentucky. La ciudad está rodeada por hermosos bosques y
                   campos. Es conocida como la capital de la artesanía del
@@ -173,7 +173,7 @@
                   un platillo local hecho de pan de maíz y que se sirve con una
                   cuchara de madera.
                 </p>
-                <p class="content__place__text-2">
+                <p class="content__place-text-2">
                   Aunque, probablemente es mejor conocida por su universidad. El
                   Berea College fue fundado en 1855 y fue la primera universidad
                   sureña integrada racialmente, así como la primera en ser
@@ -183,29 +183,29 @@
                 </p>
               </div>
 
-              <button class="content__place__button">
-                <span class="content__place__button-text">
+              <button class="content__place-button">
+                <span class="content__place-button-text">
                   Compra esta obra como NFT
                 </span>
               </button>
             </div>
 
             <div class="content__place">
-              <h3 class="content__place__title">Muramvya, Burundi</h3>
+              <h3 class="content__place-title">Muramvya, Burundi</h3>
 
-              <div class="content__place__artist">
-                <p class="content__place__artist-url">Artistas</p>
-                <p class="content__place__artist-text">
+              <div class="content__place-artist">
+                <p class="content__place-artist-url">Artistas</p>
+                <p class="content__place-artist-text">
                   Grevisse Kenguruka, editor técnico
                 </p>
               </div>
               <img
-                class="content__place__image"
+                class="content__place-image"
                 src="images/places__image-1.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place__paragraphs">
-                <p class="content__place__text-1">
+              <div class="content__place-image">
+                <p class="content__place-text-1">
                   Muramvya es una de las 18 provincias de Burundi. Durante la
                   época del reino, Muramvya fue su capital; y en 2017, gracias a
                   su paisaje cultural y natural, se añadió a la Lista
@@ -213,7 +213,7 @@
                   ubicada en el centro de Burundi, entre las capitales política
                   y económica del país.
                 </p>
-                <p class="content__place__text-2">
+                <p class="content__place-text-2">
                   Su clima es más bien frío durante la noche, pero durante el
                   día, podrías pensar que estás en el paraíso. A sus 2,665
                   metros (8,743 ft) sobre el nivel del mar, el Monte Teza es uno
@@ -222,7 +222,7 @@
                   plantaciones de té y café del país, y que representa la
                   mayoría de las exportaciones de Burundi.
                 </p>
-                <p class="content__place__text-3">
+                <p class="content__place-text-3">
                   El Parque nacional de Kibira, una de las mayores reservas de
                   vida silvestre para los simios, ocupa parte de cuatro
                   provincias, incluyendo Muramvya. Este parque nacional se
@@ -234,27 +234,27 @@
                 </p>
               </div>
 
-              <button class="content__place__button">
-                <span class="content__place__button-text">
+              <button class="content__place-button">
+                <span class="content__place-button-text">
                   Compra esta obra como NFT
                 </span>
               </button>
             </div>
 
             <div class="content__place">
-              <h3 class="content__place__title">México Cholula</h3>
+              <h3 class="content__place-title">México Cholula</h3>
 
-              <div class="content__place__artist">
-                <p class="content__place__artist-url">Artistas</p>
-                <p class="content__place__artist-text">Ari Campos, TripleTen</p>
+              <div class="content__place-artist">
+                <p class="content__place-artist-url">Artistas</p>
+                <p class="content__place-artist-text">Ari Campos, TripleTen</p>
               </div>
               <img
-                class="content__place__image"
+                class="content__place-image"
                 src="images/places__image-4.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place__paragraphs">
-                <p class="content__place__text-1">
+              <div class="content__place-image">
+                <p class="content__place-text-1">
                   Las pirámides prehispánicas de Cholula se elevan
                   majestuosamente desde el corazón de la ciudad, destacando la
                   Gran Pirámide de Cholula con su iglesia en la cima. Construida
@@ -266,7 +266,7 @@
                   combinación de herencia ancestral y vida contemporánea atrae a
                   visitantes durante todo el año.
                 </p>
-                <p class="content__place__text-2">
+                <p class="content__place-text-2">
                   Los visitantes pueden explorar túneles subterráneos, museos, y
                   disfrutar de la gastronomía local. La mezcla de tradición y
                   modernidad hace de Cholula un destino único. Las vistas del
@@ -275,8 +275,8 @@
                 </p>
               </div>
 
-              <button class="content__place__button">
-                <span class="content__place__button-text">
+              <button class="content__place-button">
+                <span class="content__place-button-text">
                   Compra esta obra como NFT
                 </span>
               </button>
