Correcion de linear gradient

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 src="images/places__image-1.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place-image">
+              <div class="content__place__paragraphs">
                 <p class="content__place-text-1">
                   Las ruinas medievales del castillo de Cricieth dominan la
                   ciudad desde una roca que extiende sobre el mar. Se cree que
@@ -139,11 +139,15 @@
                 </p>
               </div>
 
-              <button class="content__place-button">
-                <span class="content__place-button-text">
+              <div class="content__place-button">
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  target="_blank"
+                  class="content__place-button-text"
+                >
                   Compra esta obra como NFT
-                </span>
-              </button>
+                </a>
+              </div>
             </div>
 
             <div class="content__place">
@@ -161,7 +165,7 @@
                 src="images/places__image-2.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place-image">
+              <div class="content__place__paragraphs">
                 <p class="content__place-text-1">
                   Berea es una pequeña ciudad ubicada en la parte central de
                   Kentucky. La ciudad está rodeada por hermosos bosques y
@@ -183,11 +187,15 @@
                 </p>
               </div>
 
-              <button class="content__place-button">
-                <span class="content__place-button-text">
+              <div class="content__place-button">
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  target="_blank"
+                  class="content__place-button-text"
+                >
                   Compra esta obra como NFT
-                </span>
-              </button>
+                </a>
+              </div>
             </div>
 
             <div class="content__place">
@@ -204,7 +212,7 @@
                 src="images/places__image-1.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place-image">
+              <div class="content__place__paragraphs">
                 <p class="content__place-text-1">
                   Muramvya es una de las 18 provincias de Burundi. Durante la
                   época del reino, Muramvya fue su capital; y en 2017, gracias a
@@ -234,11 +242,15 @@
                 </p>
               </div>
 
-              <button class="content__place-button">
-                <span class="content__place-button-text">
+              <div class="content__place-button">
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  target="_blank"
+                  class="content__place-button-text"
+                >
                   Compra esta obra como NFT
-                </span>
-              </button>
+                </a>
+              </div>
             </div>
 
             <div class="content__place">
@@ -253,7 +265,7 @@
                 src="images/places__image-4.jpg"
                 alt="Imagen De Paisaje"
               />
-              <div class="content__place-image">
+              <div class="content__place__paragraphs">
                 <p class="content__place-text-1">
                   Las pirámides prehispánicas de Cholula se elevan
                   majestuosamente desde el corazón de la ciudad, destacando la
@@ -275,11 +287,15 @@
                 </p>
               </div>
 
-              <button class="content__place-button">
-                <span class="content__place-button-text">
+              <div class="content__place-button">
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  target="_blank"
+                  class="content__place-button-text"
+                >
                   Compra esta obra como NFT
-                </span>
-              </button>
+                </a>
+              </div>
             </div>
           </section>
         </main>
